--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <p>2：特别瞬间页照片集无法显示</p>
       <p>3：合照页拍照无法下一页或重复拍照</p>
       <p>请给予网页所有手机权限</p>
-      <p>支持iOS16+版本号</p>
+      <p>支持iOS16+版本号cfb4a99</p>
       
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
