--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
     <!-- 首页 -->
     <div class="section" id="section1">
       <h1>祝李老师毕业快乐！🎓🎉</h1>
-      <p>！！警告！！</p>
-      <p>3有概率让手机死机爆内存</p>
-      <p>1：页面切换后显示内容重定向</p>
+      <p>已知问题</p>
+      <p>1：页面颜色校准</p>
       <p>2：特别瞬间页照片集无法显示</p>
-      <p>3：合照页拍照无法下一页或重复拍照</p>
+      <p>3：合照页排版问题</p>
+      <p>4：GPU加速translate3d运行缓慢</p>
       <p>请给予网页所有手机权限</p>
       <p>支持iOS16+版本号cfb4a99</p>
       
