--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <p>3：合照页排版问题</p>
       <p>4：GPU加速translate3d运行缓慢</p>
       <p>请给予网页所有手机权限</p>
-      <p>支持iOS16+版本号cfb4a99</p>
+      <p>支持iOS16+版本号cft8r99</p>
       
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
