--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>已知问题</p>
       <p>1：页面颜色校准</p>
-      <p>2：特别瞬间页照片集无法显示</p>
+      <p>2：GPU可能过载</p>
       <p>3：合照页排版问题</p>
       <p>4：GPU加速translate3d运行缓慢</p>
       <p>请给予网页所有手机权限</p>
-      <p>支持iOS16+版本号cft8r99</p>
+      <p>支持iOS16+版本号ay6fh41</p>
       
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
