--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>祝李老师毕业快乐！</title>
   <style>
     :root {
-      --primary-color: #2193b0;
-      --secondary-color: #6dd5ed;
+      --primary-color: #87CEEB;
+      --secondary-color: #B0E0E6;
       --white-bg: rgba(255, 255, 255, 0.2);
       --transition-duration: 0.4s;
     }
