--- a/index.html
+++ b/index.html
@@ -299,10 +299,9 @@
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
-      <p>在10秒内点击按钮尽可能多次</p>
-      <p>来获取分数</p>
-      <p>分数：<span id="scoreDisplay">0</span></p>
-      <button id="gameButton" onclick="gameClick()">点我得分</button>
+      <p>点击下方按钮以加速</p>
+      <p>点击次数：<span id="scoreDisplay">0</span></p>
+      <button id="gameButton" onclick="gameClick()">点我加速</button>
       <p id="timerDisplay">时间剩余: 10秒</p>
       <button onclick="nextSlide()" id="nextButtonGame" style="display:none;">下一页</button>
     </div>
