--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
     <!-- 定位页面（插入在首页后） -->
     <div class="section" id="section2" style="animation-delay: 0.3s;">
-      <h1>看一下你在哪里</h1>
+      <h1>先看一下你在哪里</h1>
       <p id="locationStatus">正在获取您的位置...</p>
       <div id="mapWrapper" style="width:100%; margin:20px 0; position:relative;">
         <div id="map" style="width:100%; height:400px; display:none;"></div>
@@ -279,7 +279,6 @@
     <div class="section" id="section4" style="animation-delay: 0.9s;">
       <h1>拍个照</h1>
       <p>请允许调用摄像头进行拍照</p>
-      <p>！测试版网站 请谨慎操作！</p>
       <video id="video" width="320" height="240" autoplay playsinline style="border:1px solid #ccc;"></video>
       <br>
       <button id="captureButton" onclick="capturePhoto()">拍照</button>
