--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <p>已知问题</p>
       <p>1：传感器持续运行</p>
       <p>2：GPU可能过载</p>
-      <p>3：合照页排版优化</p>
+      <p>3：谷歌服务器链接不稳定</p>
       <p>4：GPU加速translate3d运行缓慢</p>
       <p>请给予网页所有手机权限</p>
       <p>支持iOS16+版本号ay6fh41</p>
