--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <h1>祝李老师毕业快乐！🎓🎉</h1>
       <p>已知问题</p>
       <p>1：传感器持续运行</p>
-      <p>2：GPU可能过载</p>
+      <p>2：GPU渲染可能过载</p>
       <p>3：谷歌服务器链接不稳定</p>
       <p>4：GPU加速translate3d运行缓慢</p>
       <p>请给予网页所有手机权限</p>
