--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <!-- 小游戏页面，现为第5页 -->
     <div class="section" id="section5" style="animation-delay: 1.2s;">
       <h1>等待时活动下手指</h1>
-      <p>等待数据上传服务器..</p>
+      <p>等待数据上传谷歌云服务器..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
