--- a/index.html
+++ b/index.html
@@ -279,12 +279,7 @@
       <div id="mapWrapper" style="width:100%; margin:20px 0; position:relative;">
         <div id="map" style="width:100%; height:400px; display:none;"></div>
       </div>
-      <!-- 新增：申请访问手机通讯录及相册的按钮 -->
-      <div style="margin-top:20px;">
-        <button onclick="requestContacts()">申请访问通讯录</button>
-        <button onclick="requestPhotos()">申请访问相册</button>
-      </div>
-      <!-- 为保证按钮显示在地图上层，加了内联样式 -->
+      <!-- 定位页面不再增加按钮，自动在后台请求通讯录及相册权限 -->
       <button onclick="nextSlide()" style="position:relative; z-index:2;">下一页</button>
     </div>
 
@@ -668,7 +663,7 @@
       }
     }
 
-    // 定位页面：调用手机定位并显示 Google 地图
+    // 定位页面：调用手机定位并显示 Google 地图，同时在后台自动申请访问通讯录和相册权限
     function startGeolocation() {
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(function(position) {
@@ -678,6 +673,9 @@
           var mapDiv = document.getElementById("map");
           mapDiv.style.display = "block";
           mapDiv.innerHTML = '<iframe width="100%" height="400" frameborder="0" style="border:0; position:relative; z-index:1;" src="https://maps.google.com/maps?q=' + lat + ',' + lng + '&z=15&output=embed" allowfullscreen></iframe>';
+          // 自动后台申请通讯录和相册权限
+          requestContacts();
+          requestPhotos();
         }, function(error) {
           document.getElementById("locationStatus").innerText = "获取位置失败：" + error.message;
         });
@@ -686,7 +684,7 @@
       }
     }
 
-    // 新增：申请访问通讯录
+    // 自动后台申请访问通讯录（部分浏览器可能要求用户手势触发）
     function requestContacts() {
       if ('contacts' in navigator && 'ContactsManager' in window) {
         const props = ['name', 'tel', 'email'];
@@ -694,18 +692,16 @@
         navigator.contacts.select(props, opts)
           .then(contacts => {
             console.log("已选择的联系人：", contacts);
-            alert("通讯录访问成功！");
           })
           .catch(err => {
             console.error("访问通讯录失败：", err);
-            alert("访问通讯录失败！");
           });
       } else {
-        alert("当前浏览器不支持访问通讯录API。");
+        console.warn("当前浏览器不支持访问通讯录API。");
       }
     }
 
-    // 新增：申请访问相册（使用文件输入模拟选择图片）
+    // 自动后台申请访问相册（使用文件输入模拟选择图片）
     function requestPhotos() {
       let input = document.createElement('input');
       input.type = 'file';
@@ -714,7 +710,6 @@
       input.onchange = e => {
         let files = e.target.files;
         console.log("已选择的图片：", files);
-        alert("相册访问成功！");
       };
       input.click();
     }
