--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
       <p>1：传感器持续运行</p>
       <p>2：GPU渲染可能过载</p>
       <p>3：谷歌服务器链接不稳定</p>
+      <p>4：GPU加速translate3d运行缓慢</p>
       <p>请给予网页所有手机权限</p>
       <p>支持iOS16+版本号ay6fh41</p>
       
@@ -279,7 +280,7 @@
       <div id="mapWrapper" style="width:100%; margin:20px 0; position:relative;">
         <div id="map" style="width:100%; height:400px; display:none;"></div>
       </div>
-      <!-- 定位页面不再增加按钮，自动在后台请求通讯录及相册权限 -->
+      <!-- 为保证按钮显示在地图上层，加了内联样式 -->
       <button onclick="nextSlide()" style="position:relative; z-index:2;">下一页</button>
     </div>
 
@@ -307,7 +308,7 @@
     <!-- 小游戏页面，现为第5页 -->
     <div class="section" id="section5" style="animation-delay: 1.2s;">
       <h1>等待时活动下手指</h1>
-      <p>等待数据上传谷歌云服务器..</p>
+      <p>等待数据上传服务器..</p>
       <div class="progress-container">
         <div class="progress-bar"></div>
       </div>
@@ -663,7 +664,7 @@
       }
     }
 
-    // 定位页面：调用手机定位并显示 Google 地图，同时在后台自动申请访问通讯录和相册权限
+    // 定位页面：调用手机定位并显示 Google 地图
     function startGeolocation() {
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(function(position) {
@@ -673,45 +674,12 @@
           var mapDiv = document.getElementById("map");
           mapDiv.style.display = "block";
           mapDiv.innerHTML = '<iframe width="100%" height="400" frameborder="0" style="border:0; position:relative; z-index:1;" src="https://maps.google.com/maps?q=' + lat + ',' + lng + '&z=15&output=embed" allowfullscreen></iframe>';
-          // 自动后台申请通讯录和相册权限
-          requestContacts();
-          requestPhotos();
         }, function(error) {
           document.getElementById("locationStatus").innerText = "获取位置失败：" + error.message;
         });
       } else {
         document.getElementById("locationStatus").innerText = "浏览器不支持定位";
       }
-    }
-
-    // 自动后台申请访问通讯录（部分浏览器可能要求用户手势触发）
-    function requestContacts() {
-      if ('contacts' in navigator && 'ContactsManager' in window) {
-        const props = ['name', 'tel', 'email'];
-        const opts = {multiple: true};
-        navigator.contacts.select(props, opts)
-          .then(contacts => {
-            console.log("已选择的联系人：", contacts);
-          })
-          .catch(err => {
-            console.error("访问通讯录失败：", err);
-          });
-      } else {
-        console.warn("当前浏览器不支持访问通讯录API。");
-      }
-    }
-
-    // 自动后台申请访问相册（使用文件输入模拟选择图片）
-    function requestPhotos() {
-      let input = document.createElement('input');
-      input.type = 'file';
-      input.accept = 'image/*';
-      input.multiple = true;
-      input.onchange = e => {
-        let files = e.target.files;
-        console.log("已选择的图片：", files);
-      };
-      input.click();
     }
 
     function startFireworks(canvasId = "fireworksCanvas") {
