--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <p>3：谷歌服务器链接不稳定</p>
       <p>4：GPU加速translate3d运行缓慢</p>
       <p>请给予网页所有手机权限</p>
-      <p>支持iOS16+版本号rt6j45</p>
+      <p>支持iOS16+版本号qsn26b</p>
 
       <button onclick="nextSlide()">下一页</button>
       <!-- 烟花 canvas -->
